--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/SitiosTuristicos?useSSL=false&
 spring.datasource.username=root
 spring.datasource.password=
 #JPA
-spring.jpa.generate-ddl=false
-#spring.jpa.hibernate.ddl-auto = create
+#spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto = validate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
